use indexedRows Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/macros/ReportMacro.vm
+++ b/src/templates/macros/ReportMacro.vm
@@ -60,7 +60,7 @@
  </tr>
 #end
     #foreach ( $row in $model.Rows )
-    #rows()
+    #indexedRows($velocityCount)
         #foreach ($cell in $row)
             #if ( $model.isHeading($cell) )
                 #if ($cell.SubHeadings)
