another round of formatting changes and cleanup Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/admin/GlobalAttributeSelect.vm
+++ b/src/templates/screens/admin/GlobalAttributeSelect.vm
@@ -1,67 +1,83 @@
 $page.setTitle("Select global attribute")
+
+<div class="app" id="globalAttributeSelect">
+
 <form action="$link.setPage("admin,GlobalAttributeSelect.vm")" method="get">
 <input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
 <input type="hidden" name="groupId" value = "$data.Parameters.getString("groupId")")
+
 <div class="tabs" />
  <table cellpadding="3" cellspacing="0" border="0">
  <tr>
  <th>Global attributes</th>
- <td><a href="#" title="Customize 'enter issue'">Customize "enter issue"</a></td>
+ <td>Customize "enter issue"</td>
  </tr>
  </table>
 </div>
-<div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
 <tr>
-<td class="firstchild"><div>
-Select items to
-</div><input type="submit" value="Add to 'Enter issue page'" name="eventSubmit_doSelectattribute" />
+<td class="firstchild">
+<div>Select items to</div>
+<input type="submit" value="Add to 'Enter issue page'" name="eventSubmit_doSelectattribute" />
 </td>
-<td><div>
-General functions
-</div>
+
+<td>
+<div>General functions</div>
 #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
 <input type="submit" value="Create new" />
  #end
- &nbsp;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
-</td></table></div>
+ &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+</td>
+</table>
+</div>
+
 <h3>Global attributes</h3>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
 <tr>
-<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" /></th>
-<th><a href="#" title="sort">Input type</a></th>
-<th><a href="#" title="sort">Attribute name</a></th>
-<th><a href="#" title="sort">Description</a></th>
-<th><a href="#" title="sort">Author</a></th>
-<th><a href="#" title="sort">Creation date</a></th>
+<th nowrap="nowrap">
+<img src="/scarab/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
+<img src="/scarab/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
+</th>
+<th>Input type</th>
+<th>Attribute name</th>
+<th>Description</th>
+<th>Author</th>
+<th>Creation date</th>
 </tr>
+
 #set ($allAttributes = $scarabR.CurrentModule.AvailableAttributes)
-#foreach( $attribute in $allAttributes )
-#rows()
-<td><input type="radio" name="attributeId" value="$attribute.AttributeId" /></td>
-<td>$attribute.AttributeType.Name</td>
-<td><a href="#">$attribute.Name</a></td>
-<td>$attribute.Description</td>
-#set ($createdUser = $scarabR.getUser($attribute.CreatedBy) )
-<td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
-<td>$format.getDate($scarabG.DateFormat, $attribute.CreatedDate)</td>
-</tr>
+#foreach ($attribute in $allAttributes)
+ #indexedRows($velocityCount)
+  <td><input type="radio" name="attributeId" value="$attribute.AttributeId" /></td>
+  <td>$attribute.AttributeType.Name</td>
+  <td>$attribute.Name</td>
+  <td>$attribute.Description</td>
+  #set ($createdUser = $scarabR.getUser($attribute.CreatedBy))
+  <td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
+  <td>$format.getDate($scarabG.DateFormat, $attribute.CreatedDate)</td>
+ </tr>
 #end
 </table>
-<div class="functnbar2"><table cellpadding="4" cellspacing="0" border="1">
+
+<div class="functnbar2">
+<table cellpadding="4" cellspacing="0" border="1">
 <tr>
-<td class="firstchild"><div>
-Select items to
-</div>
+<td class="firstchild">
+<div>Select items to</div>
 <input type="submit" value="Add to 'Enter issue page'" name="eventSubmit_doSelectattribute" />
 </td>
- <td><div>
-General functions
-</div>#if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
+ <td>
+ <div>General functions</div>
+  #if ($security.hasPermission("Domain | Edit", $scarabR.CurrentModule))
     <input type="submit" value="create new" />
-  &nbsp; 
+  &#160; 
   #end
-<input type="submit" value="Cancel" name="eventSubmit_doCancel" /></td>
- </tr>
- </table>
+ <input type="submit" value="Cancel" name="eventSubmit_doCancel" />
+ </td>
+</tr>
+</table>
 </div>
+
 </div>
